@@ -1,6 +1,6 @@
 [program:zeoserver]
-command={{ plone_target_path }}/{{ plone_instance_name }}/bin/zeoserver fg
-directory={{ plone_target_path }}/{{ plone_instance_name }}
+command={{ plone_instance_home }}/bin/zeoserver fg
+directory={{ plone_instance_home }}
 redirect_stderr={{ plone_redirect_stderr }}
 autostart={{ plone_autostart }}
 autorestart={{ plone_autorestart }}
@@ -13,8 +13,8 @@ environment={% for name, value in task_env_vars.iteritems() %}{{ name }}="{{ val
 
 {% for client in range(1, plone_client_count+1) %}
 [program:zeoclient{{ client }}]
-command={{ plone_target_path }}/{{ plone_instance_name }}/bin/client{{ client }} console
-directory={{ plone_target_path }}/{{ plone_instance_name }}
+command={{ plone_instance_home }}/bin/client{{ client }} console
+directory={{ plone_instance_home }}
 redirect_stderr={{ plone_redirect_stderr }}
 autostart={{ plone_autostart }}
 autorestart={{ plone_autorestart }}
